2006-06-21  Andy Wingo  <wingo@pobox.com>

	* http.py (Stats.__init__): Add some instance vars for tracking
	load deltas.
	(Stats.clientRemoved, Stats.clientAdded): Keep count of total
	clients added and removed.
	(Stats.updateLoadDeltas): Method to call when you want to update
	the load deltas info.
	(Stats.getLoadDeltas): New method.
	(MultifdSinkStreamer._checkUpdate): Update load deltas every so
	often yo.
	(MultifdSinkStreamer.getLoadData): Return actual load deltas.

2006-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/admin.py:
	* flumotion/manager/base.py:
	* flumotion/manager/manager.py:
	  doc updates
	* flumotion/worker/worker.py:
	  a last 0.8 relic

2006-06-20  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* flumotion/common/boot.py.in:
	  make the assert more helpful
	* flumotion/test/common.py:
	  set up gobject and gst before running tests, so we are guaranteed
	  to have the gst-python version we actually support.

2006-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/pychecker.mk:
	* configure.ac:
	* flumotion/common/boot.py.in:
	* flumotion/common/gstreamer.py:
	* flumotion/component/Makefile.am:
	* flumotion/component/component.xml:
	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/converters/overlay/overlay.py:
	* flumotion/component/effects/colorbalance/colorbalance.py:
	* flumotion/component/effects/volume/volume.py:
	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/jpeg/jpeg.py:
	* flumotion/component/encoders/vorbis/vorbis.py:
	* flumotion/component/encoders/vorbis/vorbis.xml:
	* flumotion/component/encoders/vorbis/vorbis08.py:
	* flumotion/component/feedcomponent.py:
	* flumotion/component/feedcomponent08.py:
	* flumotion/component/muxers/multipart.py:
	* flumotion/component/muxers/ogg.py:
	* flumotion/component/producers/Makefile.am: